--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "planner-in-the-cloud",
   "version": "0.0.1",
-  "description": "Planning Solver API.",
+  "description": "Fast Downward Solver with modificed parameters",
   "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
