--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "Christian Muise",
   "license": "GPLv3",
   "engines": {
-    "node": "0.10.29"
+    "node": ">=0.10.29"
   },
   "dependencies": {
     "body-parser": "^1.14.2",
